# vector-matrix-store

./: .gitignore  LICENSE  README.md  pyproject.toml
evals/: jax_evals.py  numpy_evals.py  utils.py
recipes/: jax_examples.py  numpy_examples.py  utils.py
tests/: file_system_context_tests.py  matrix_tests.py  mocks.py  testing_utils.py  vector_index_tests.py  vector_store_tests.py
vector_matrix_store/: __init__.py  base_enum.py  constants.py  file_system_context.py  matrix.py  metrics_util.py  schema.py  vector_index.py  vector_store.py
